# todo-drf

./: .gitignore  .pre-commit-config.yaml  celerybeat-schedule  pyproject.toml
.github/workflows/: ci.yml
apps/comments/: models.py  serializers.py  urls.py  views.py
apps/comments/migrations/: 0001_initial.py  0002_rename_comment_comments_alter_comments_table.py  0003_rename_comments_comment_alter_comment_table.py
apps/tags/: models.py  serializers.py  urls.py  views.py
apps/tags/migrations/: 0001_initial.py  0002_rename_tag_tags_alter_tags_table.py  0003_rename_tags_tag_alter_tag_table.py
apps/task_tags/: apps.py  models.py  serializers.py  urls.py  views.py
apps/task_tags/migrations/: 0001_initial.py  0002_rename_tag_tasktag_tags.py  0003_alter_tasktag_table.py  0004_alter_tasktag_table.py
apps/tasks/: models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
apps/tasks/migrations/: 0001_initial.py  0002_alter_task_assigned.py  0002_rename_tasks_task_status_668b02_idx_tasks_status_d1d175_idx_and_more.py  0003_rename_tasks_task_status_668b02_idx_tasks_status_d1d175_idx_and_more.py  0004_rename_tasks_status_d1d175_idx_tasks_task_status_668b02_idx_and_more.py  0005_alter_task_owner.py
apps/users/: authentication.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_is_active_emailcode.py  0002_alter_user_is_superuser.py  0004_remove_user_is_staff.py  (+5 more)
docker/: Dockerfile  docker-compose.yml
tests/api/: test_getuser_api.py
todoapi/: celery.py  settings.py  urls.py
